compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_segment_unit_no_size.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 180
expression: "let x = <<1:unit(5)>> x"
snapshot_kind: text
---
----- SOURCE CODE
let x = <<1:unit(5)>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let x = <<1:unit(5)>> x
  │             ^^^^^^^ This needs an explicit size

Hint: If you specify unit() you must also specify size().
See: https://tour.gleam.run/data-types/bit-arrays/
